--- a/roles/day1/tasks/main.yml
+++ b/roles/day1/tasks/main.yml
@@ -2,4 +2,5 @@
   ansible.builtin.user:
     name: day1
     state: present
-    password: jiujingbei
+    create_home: yes
+    password: "{{ 'jiujingbei' | password_hash('sha512') }}"
