--- a/playbook.yml
+++ b/playbook.yml
@@ -1,56 +1,10 @@
-
 ---
-- name: Restrict network using ufw (Ubuntu 24.04)
-  hosts: all
+- name: Configure this machine using ansible-pull
+  hosts: localhost
   connection: local
-  become: yes
+  become: yes # 大部分操作需要 root 权限
 
-  vars:
-    allowed_hosts:
-      - { domain: "codeconnect.sc.edu.my", ip: "192.168.28.166" }
-      - { domain: "ansible-config.sc.edu.my", ip: "192.168.0.177" }
-
-  tasks:
-    - name: Ensure ufw is installed
-      ansible.builtin.apt:
-        name: ufw
-        state: present
-        update_cache: yes
-
-    - name: Reset ufw rules (clean start)
-      ansible.builtin.command: ufw --force reset
-
-    - name: Set default policy to deny incoming and outgoing
-      ansible.builtin.ufw:
-        state: enabled
-        policy: deny
-        direction: incoming
-
-    - name: Set default policy to deny outgoing
-      ansible.builtin.ufw:
-        state: enabled
-        policy: deny
-        direction: outgoing
-
-    - name: Allow SSH (important!)
-      ansible.builtin.ufw:
-        rule: allow
-        name: OpenSSH
-
-    - name: Allow DNS (UDP)
-      ansible.builtin.ufw:
-        rule: allow
-        port: 53
-        proto: udp
-
-    - name: Allow DNS (TCP)
-      ansible.builtin.ufw:
-        rule: allow
-        port: 53
-        proto: tcp
-
-    - name: Allow specific outgoing IPs
-      ansible.builtin.ufw:
-        rule: allow
-        to_ip: "{{ item.ip }}"
-      loop: "{{ allowed_hosts }}"
+  roles:
+    - delete_home_dir
+    - day1
+    - plugins
